<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity">

    <ImageView
        android:id="@+id/ivCoinLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        tools:text=" BTC " />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCoinLogo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="/"/>

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        app:layout_constraintStart_toEndOf="@id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        tools:text=" USD "/>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvSlash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/text_price"/>

            <TextView
                android:id="@+id/tvPriceVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvPrice"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="439929.33"/>
            
            <View
                android:id="@+id/viewLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvPrice"/>

            <TextView
                android:id="@+id/tvMinDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine1"
                android:text="@string/text_min_per_day"/>

            <TextView
                android:id="@+id/tvMinDayVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvMinDay"
                app:layout_constraintTop_toBottomOf="@id/viewLine1"
                tools:text="439929.33"/>

            <View
                android:id="@+id/viewLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvMinDay"/>

            <TextView
                android:id="@+id/tvMaxDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine2"
                android:text="@string/text_max_per_day"/>

            <TextView
                android:id="@+id/tvMaxDayVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvMaxDay"
                app:layout_constraintTop_toBottomOf="@id/viewLine2"
                tools:text="439929.33"/>

            <View
                android:id="@+id/viewLine3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvMaxDay"/>

            <TextView
                android:id="@+id/tvLastTrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine3"
                android:text="@string/text_last_trade"/>

            <TextView
                android:id="@+id/tvLastTradeVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvLastTrade"
                app:layout_constraintTop_toBottomOf="@id/viewLine3"
                tools:text="Binance"/>

            <View
                android:id="@+id/viewLine4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvLastTrade"/>

            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine4"
                android:text="@string/text_was_updated"/>

            <TextView
                android:id="@+id/tvUpdateVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvUpdate"
                app:layout_constraintTop_toBottomOf="@id/viewLine4"
                tools:text="Binance"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>